# Inx

./: Makefile
arch/: Cargo.toml
arch/src/: main.rs
kernel/: Cargo.toml  link.x  makefile
kernel/.cargo/: config.toml
kernel/include/: include.h  kernel_utils.h  lib.h
kernel/include/graphic/: CyrAsia-Terminus16.h  graphic.h
kernel/include/interrupts/: interrupts.h
kernel/include/lib/: queue.h  vector.h
kernel/include/memory/: efimemory.h  heap.h  memory.h  page_frame_allocator.h  paging.h
kernel/src/: kernel.cpp  kernel_utils.cpp  main.rs
kernel/src/graphic/: CyrAsia-Terminus16.psf  draw.cpp  main.cpp  mod.rs  print.cpp  print.rs  psf1.rs
kernel/src/interrupts/: main.cpp
kernel/src/lib/: main.cpp  memory_operator_new_delete.cpp
kernel/src/memory/: heap.cpp  main.cpp  page_frame_allocator.cpp  paging.cpp
